# Market-Feed-Handler

./: CMakeLists.txt  README.md
benchmarks/: bench_cache.cpp  bench_latency.cpp  bench_parser.cpp
docs/: DESIGN.md  GBM.md  NETWORK.md  PERFORMANCE.md  QUESTIONS.md
include/: protocol.h
include/client/: feed_handler.h  parser.h  socket.h  visualizer.h
include/common/: cache.h  latency_tracker.h  memory_pool.h  ring_buffer.h
include/server/: client_manager.h  exchange_simulator.h  tick_generator.h
scripts/: benchmark_latency.sh  build.sh  run_demo.sh
src/client/: feed_handler.cpp  main.cpp  parser.cpp  socket.cpp  visualizer.cpp
src/common/: cache.cpp  latency_tracker.cpp
src/server/: client_manager.cpp  exchange_simulator.cpp  main.cpp  tick_generator.cpp
tests/: test_all.cpp
